crates/gossamer-diagnostics/tests/snapshots/GL0025.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0025]: Equality against a float literal is almost never what you want — — here
--- framed ---
error[GL0025]: Equality against a float literal is almost never what you want —
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
