crates/gossamer-diagnostics/tests/snapshots/GL0026.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0026]: `else {}` adds no information. Drop the else and let the `if` — here
--- framed ---
error[GL0026]: `else {}` adds no information. Drop the else and let the `if`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
