crates/gossamer-diagnostics/tests/snapshots/GL0029.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0029]: `!(a == b)` is just `a != b`. Prefer the direct operator. - here
--- framed ---
error[GL0029]: `!(a == b)` is just `a != b`. Prefer the direct operator.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
