crates/gossamer-diagnostics/tests/snapshots/GL0030.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0030]: Three or more nested `if / else if` layers are hard to skim. - here
--- framed ---
error[GL0030]: Three or more nested `if / else if` layers are hard to skim.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
