crates/gossamer-diagnostics/tests/snapshots/GL0031.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0031]: A literal range whose lower bound exceeds its upper bound is - here
--- framed ---
error[GL0031]: A literal range whose lower bound exceeds its upper bound is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
