crates/gossamer-diagnostics/tests/snapshots/GL0033.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0033]: `-(-x)` is `x`. The extra unary does nothing. — here
--- framed ---
error[GL0033]: `-(-x)` is `x`. The extra unary does nothing.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
