crates/gossamer-diagnostics/tests/snapshots/GL0035.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0035]: Concatenating an empty string literal is a no-op. Drop the - here
--- framed ---
error[GL0035]: Concatenating an empty string literal is a no-op. Drop the
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
