crates/gossamer-diagnostics/tests/snapshots/GL0036.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0036]: `println("")` already writes a newline. Don't pass `"\n"` - here
--- framed ---
error[GL0036]: `println("")` already writes a newline. Don't pass `"\n"`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
